Added in startup.sh default parameter for JAVA_OPTS (memory) Sample in perf.env with example for this Adapted PerfLauncher in order to permit the JAVA_OPTS usage (need to put this in Bonita Perf Tool git repo)