@@ -2,7 +2,7 @@
 cd /opt/config
 #PERF_BROKER_ADDRESS=`ip addr | grep 'state UP' -A2 | tail -n1 | awk '{print $2}' | cut -f1 -d'/'`:61616
 PERF_BROKER_ADDRESS=${PERF_BROKER_ADDRESS:-`ifconfig eth0 | grep 'inet addr:'|cut -d: -f2 | awk '{ print $1}'`:61616}
-
+JAVA_OPTS=${JAVA_OPTS:-"-Xmx2g -Xms1g -Xss256m -XX:PermSize=256m -XX:MaxPermSize=512m"}
 
 if ! [ -z "$BONITA_PORT_8080_TCP_ADDR" ]; then
 	echo "youpi"
@@ -14,4 +14,13 @@ echo "Local broker URL :"${PERF_BROKER_ADDRESS}
 echo "Bonita URL :"${PERF_BONITA_URL}
 ./config.sh
 cd /opt/PerfLauncher/bin
-./perflauncher.sh
+
+BASEDIR=`dirname $0`/..
+
+CFG_FOLDER=$BASEDIR/conf
+
+JOPTS="$JOPTS -Djava.util.logging.config.file=$BASEDIR/conf/logging.properties"
+JOPTS="$JOPTS -Dlogback.configurationFile=file:$BASEDIR/conf/logback.xml"
+JOPTS="$JOPTS -Dconf.folder=$CFG_FOLDER"
+
+java -cp "$BASEDIR/lib/*" $JOPTS $JAVA_OPTS org.bonitasoft.engine.performance.PerfLauncher
